<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ViewPager for the content of the pages -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_manga_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hungry_btn" />

            <TextView
                android:id="@+id/hungry_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_hungry_txt" />

            <Button
                android:id="@+id/popup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_btn" />

            <LinearLayout
                android:id="@+id/hungry_list"
                android:layout_width="match_parent"
                android:layout_height="557dp"
                android:orientation="vertical" />
        </LinearLayout>

    </LinearLayout>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>