<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#CCBDBDBD"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#CCBDBDBD">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:gravity="center"
                android:text="@string/popup_hungry_txt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/popup_add_manga_positive_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/delete"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/popup_add_manga_negative_btn"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cancel"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>